@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.3-02
-Date: 2010-1-14
+Version: 1.3-03
+Date: 2010-1-15
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
